vm-app/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm-ops-svc
  namespace: vm-ops
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    kubevirt.io/domain: fedora-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
