vm-app/webapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vm-ops-route
  namespace: vm-ops
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: webapp-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  path: /
